v2 (not working rn)

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                     <button class="next-btn">Next</button>
                 </div>
             </div>
+            <div class="result-box">
+                <h2>Results!</h2>
+                <div class="buttons">
+                    <button class="tryAgain-btn">Take It Again!</button>
+                    <button class="goHome-btn">Go To Home</button>
+                </div>
+            </div>
         </section>
         <section class="home">
             <div class="home-content">
@@ -74,7 +81,7 @@
         </div>
     </div>
 
-    <script src="questions.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="questions.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
