--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </div>
 
     <script type="module" src="questions.js"></script>
+    <script type="module" src="recommendationSystem.js"></script> <!-- David Trujillo added this t -->
     <script type="module" src="main.js"></script>
 </body>
 </html>
