--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <div class="quiz-footer">
                     <span class="question-total">1 of 6 Questions</span>
                     <button class="next-btn">Next</button>
+                    <div class="particle"> </div>
                 </div>
             </div>
             <div class="result-box">
