Add WIP pill, with all the keyframe animation

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                     <button class="goHome-btn">Go To Home</button>
                 </div>
             </div>
+            <div class="pill">
+                <div class="white"></div>
+                <div class="purple"></div>
+            </div>
         </section>
         <section class="home">
             <div class="home-content">
