Added comments to html file

--- a/index.html
+++ b/index.html
@@ -1,83 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html> <!-- This is the document type declaration, specifying the document is an HTML5 document. -->
+<html lang="en"> <!-- Opening the HTML element with the "en" language attribute. -->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vitamin App</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8"> <!-- Meta tag specifying the character encoding for the document. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Meta tag for responsive web design. -->
+    <title>Vitamin App</title> <!-- The title of the web page that appears in the browser's title bar or tab. -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link tag to include an external CSS stylesheet. -->
 </head>
 <body>
-    <main class="main">
-        <header class="header">
-            <a href="#" class="logo">VitaMatch</a>
+    <main class="main"> <!-- The main content of the web page. -->
+        <header class="header"> <!-- The header section containing the logo and navigation. -->
+            <a href="#" class="logo">VitaMatch</a> <!-- The website logo with a link. -->
 
-            <nav class="navbar">
-                <a href="#" class="active">Home</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
+            <nav class="navbar"> <!-- Navigation menu containing links. -->
+                <a href="#" class="active">Home</a> <!-- Link to the home page (active). -->
+                <a href="#">About</a> <!-- Link to the about page. -->
+                <a href="#">Services</a> <!-- Link to the services page. -->
+                <a href="#">Contact</a> <!-- Link to the contact page. -->
             </nav>
         </header>
-        <div class="container">
-        <section class="quiz-section">
-            <div class="quiz-box">
-                <h1> Vitamin Questionnare</h1>
-                <div class="quiz-header">
-                    <span>Progress Bar Goes Here</span>
+        <div class="container"> <!-- A container for organizing content. -->
+        <section class="quiz-section"> <!-- Section for the quiz content. -->
+            <div class="quiz-box"> <!-- Container for the quiz questions. -->
+                <h1> Vitamin Questionnare</h1> <!-- Title for the questionnaire. -->
+                <div class="quiz-header"> <!-- Section for the quiz header. -->
+                    <span>Progress Bar Goes Here</span> <!-- Placeholder for a progress bar. -->
                 </div>
 
-                <h2 class="question-text">What's Your Age?</h2>
+                <h2 class="question-text">What's Your Age?</h2> <!-- Heading for the age question. -->
 
-                <div class="option-list">
+                <div class="option-list"> <!-- Container for the answer options (not shown here). -->
                 </div>
-                <div class="quiz-footer">
-                    <span class="question-total">1 of 6 Questions</span>
-                    <button class="next-btn">Next</button>
-                    <div class="particle"> </div>
-                </div>
-            </div>
-            <div class="result-box">
-                <h2>Results!</h2>
-                <div class="buttons">
-                    <button class="tryAgain-btn">Take It Again!</button>
-                    <button class="goHome-btn">Go To Home</button>
+                <div class="quiz-footer"> <!-- Container for the answer options (not shown here). -->
+                    <span class="question-total">1 of 6 Questions</span> <!-- Display current question number. -->
+                    <button class="next-btn">Next</button> <!-- Button to navigate to the next question. -->
+                    <div class="particle"> </div> <!-- Placeholder for some visual element (not specified here). -->
                 </div>
             </div>
-            <div class="pill">
-                <div class="white"></div>
-                <div class="purple"></div>
+            <div class="result-box"> <!-- Container for displaying quiz results. -->
+                <h2>Results!</h2> <!-- Heading indicating the quiz results. -->
+                <div class="buttons"> <!-- Container for result-related buttons. -->
+                    <button class="tryAgain-btn">Take It Again!</button> <!-- Button to retake the quiz. -->
+                    <button class="goHome-btn">Go To Home</button> <!-- Button to navigate to the home page. -->
+                </div>
+                </div>
+            </div>
+            <div class="pill"> <!-- Container for a pill-shaped element. -->
+                <div class="white"></div> <!-- White part of the pill. -->
+                <div class="purple"></div> <!-- Purple part of the pill. -->
             </div>
         </section>
-        <section class="home">
-            <div class="home-content">
-                <h1>Get Your Vitamin Recommendations Here!</h1>
+        <section class="home"> <!-- Section for the home page content. -->
+            <div class="home-content"> <!-- Container for the home page content. -->
+                <h1>Get Your Vitamin Recommendations Here!</h1> <!-- Heading introducing the purpose of the page. -->
                 <p>Welcome to our free vitamin recommendation web application!
                     Once you complete the questionnare, we will match you with
                     the specific vitamins that can implement into your diet! 
                     Thanks for choosing VitaMatch and feel free to contact us 
                     if you have any questions!
-                </p>
-                <button class="start-btn">Let's Go!</button>
+                </p> <!-- Paragraph providing a welcoming message and explanation. -->
+                <button class="start-btn">Let's Go!</button> <!-- Button to start the vitamin recommendation process. -->
             </div>
         </section>
         </div>
     </main>
 
-    <div class="popup-info">
-        <h2>Questionnare Guide</h2>
-        <span class="info">1. Try to answer the questions to the best of your ability.</span>
-        <span class="info">2. This is not an official diagnosis. Consult a medical professional if your health situation is urgent.</span>
-        <span class="info">3. By taking this questionnare you consent to give away basic health information.</span>
-        <span class="info">4. Thanks for choosing VitaMatch!</span>
+    <div class="popup-info"> <!-- Container for the questionnaire guide and options. -->
+        <h2>Questionnare Guide</h2> <!-- Heading indicating the purpose of the popup. -->
+        <span class="info">1. Try to answer the questions to the best of your ability.</span> <!-- Guidance for answering the questions. -->
+        <span class="info">2. This is not an official diagnosis. Consult a medical professional if your health situation is urgent.</span> <!-- Disclaimer about the questionnaire's nature. -->
+        <span class="info">3. By taking this questionnare you consent to give away basic health information.</span> <!-- Explanation of user consent for information. -->
+        <span class="info">4. Thanks for choosing VitaMatch!</span> <!-- A message of gratitude. -->
 
-        <div class="btn-group">
-            <button class="info-btn exit-btn">Exit Questionnare</button>
-            <a href="#" class="info-btn continue-btn">Continue</a>
+        <div class="btn-group"> <!-- Container for buttons in the popup. -->
+            <button class="info-btn exit-btn">Exit Questionnare</button> <!-- Button to exit the questionnaire. -->
+            <a href="#" class="info-btn continue-btn">Continue</a> <!-- Link to continue with the questionnaire. -->
         </div>
     </div>
-
-    <script type="module" src="questions.js"></script>
-    <script type="module" src="recommendationSystem.js"></script> <!-- David Trujillo added this t -->
-    <script type="module" src="main.js"></script>
+    <!-- David Trujillo added this t -->
+    <script type="module" src="questions.js"></script> <!-- External JavaScript module for handling quiz questions. -->
+    <script type="module" src="recommendationSystem.js"></script> <!-- External JavaScript module for the recommendation system. -->
+    <script type="module" src="main.js"></script> <!-- External JavaScript module for the main functionality of the web application. -->
 </body>
 </html>
