MAJOR GUI CHANGES

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vitamin App</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Luckiest+Guy&family=Pixelify+Sans:wght@500&family=Public+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="main">
@@ -31,7 +34,7 @@
                 <div class="option-list">
                 </div>
                 <div class="quiz-footer">
-                    <span class="question-total">1 of 6 Questions</span>
+                    <button class="prev-btn">Prev</button>
                     <button class="next-btn">Next</button>
                     <div class="particle"> </div>
                 </div>
@@ -43,19 +46,16 @@
                     <button class="goHome-btn">Go To Home</button>
                 </div>
             </div>
-            <div class="pill">
+            <!-- <div class="pill">
                 <div class="white"></div>
                 <div class="purple"></div>
-            </div>
+            </div> -->
         </section>
         <section class="home">
             <div class="home-content">
                 <h1>Get Your Vitamin Recommendations Here!</h1>
-                <p>Welcome to our free vitamin recommendation web application!
-                    Once you complete the questionnare, we will match you with
-                    the specific vitamins that can implement into your diet! 
-                    Thanks for choosing VitaMatch and feel free to contact us 
-                    if you have any questions!
+                <p>Welcome to our free vitamin recommendation application! Click the button below to get started! We will match you with a specific Vitamin
+                    based off of the answers that you choose!
                 </p>
                 <button class="start-btn">Let's Go!</button>
             </div>
