added video background

--- a/index.html
+++ b/index.html
@@ -53,13 +53,23 @@
         </section>
         <section class="home">
             <div class="home-content">
-                <h1>Get Your Vitamin Recommendations Here!</h1>
-                <p>Welcome to our free vitamin recommendation application! Click the button below to get started! We will match you with a specific Vitamin
-                    based off of the answers that you choose!
-                </p>
+                <h1>Personalized Vitamins Within Minutes.</h1>
                 <button class="start-btn">Let's Go!</button>
             </div>
-        </section>
+            <video autoplay loop muted playsinline>
+                <source src="/assets/background-video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>    
+        <!-- </section>
+        <section class="information-section">
+            <h2>How It Works</h2>
+            <p>Our website helps you find the right vitamins for your needs. Here's how it works:</p>
+            <ol>
+                <li>Start the questionnaire to provide us with some basic information about your health.</li>
+                <li>We analyze your answers and match you with personalized vitamin recommendations.</li>
+                <li>View your results and get recommendations for a healthier life.</li>
+            </ol>
+        </section> -->
         </div>
     </main>
 
