--- a/index.html
+++ b/index.html
@@ -22,35 +22,6 @@
             </nav>
         </header>
         <div class="container">
-        <section class="quiz-section">
-            <div class="quiz-box">
-                <h1> Vitamin Questionnare</h1>
-                <div class="quiz-header">
-                    <span>Progress Bar Goes Here</span>
-                </div>
-
-                <h2 class="question-text">What's Your Age?</h2>
-
-                <div class="option-list">
-                </div>
-                <div class="quiz-footer">
-                    <button class="prev-btn">Prev</button>
-                    <button class="next-btn">Next</button>
-                    <div class="particle"> </div>
-                </div>
-            </div>
-            <div class="result-box">
-                <h2>Results!</h2>
-                <div class="buttons">
-                    <button class="tryAgain-btn">Take It Again!</button>
-                    <button class="goHome-btn">Go To Home</button>
-                </div>
-            </div>
-            <!-- <div class="pill">
-                <div class="white"></div>
-                <div class="purple"></div>
-            </div> -->
-        </section>
         <section class="home">
             <div class="home-content">
                 <h1>Personalized Vitamins Within Minutes.</h1>
@@ -60,31 +31,27 @@
                 <source src="/assets/background-video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>    
-        <!-- </section>
+            </section>
         <section class="information-section">
             <h2>How It Works</h2>
-            <p>Our website helps you find the right vitamins for your needs. Here's how it works:</p>
-            <ol>
-                <li>Start the questionnaire to provide us with some basic information about your health.</li>
-                <li>We analyze your answers and match you with personalized vitamin recommendations.</li>
-                <li>View your results and get recommendations for a healthier life.</li>
-            </ol>
-        </section> -->
+            <div class="image-container">
+                <div class="image-item">
+                    <img src="assets/vitamin-heart.jpg" alt="Image 1" class="vitamin-heart">
+                    <p>Image 1 description or content below the image.</p>
+                </div>
+                <div class="image-item">
+                    <img src="assets/healthy-meal.jpg" class="healthy-meal">
+                    <p>Image 2 description or content below the image.</p>
+                </div>
+                <div class="image-item">
+                    <img src="assets/asian.jpg" alt="Image 3" class="asian">
+                    <p>Image 3 description or content below the image.</p>
+                </div>
+            </div>
+        </section>
+        
         </div>
     </main>
-
-    <div class="popup-info">
-        <h2>Questionnare Guide</h2>
-        <span class="info">1. Try to answer the questions to the best of your ability.</span>
-        <span class="info">2. This is not an official diagnosis. Consult a medical professional if your health situation is urgent.</span>
-        <span class="info">3. By taking this questionnare you consent to give away basic health information.</span>
-        <span class="info">4. Thanks for choosing VitaMatch!</span>
-
-        <div class="btn-group">
-            <button class="info-btn exit-btn">Exit Questionnare</button>
-            <a href="#" class="info-btn continue-btn">Continue</a>
-        </div>
-    </div>
 
     <script type="module" src="questions.js"></script>
     <script type="module" src="recommendationSystem.js"></script> <!-- David Trujillo added this t -->
