--- a/index.html
+++ b/index.html
@@ -33,23 +33,31 @@
             </video>    
             </section>
         <section class="information-section">
-            <h2>How It Works</h2>
+            <h2>How it Works</h2>
             <div class="image-container">
                 <div class="image-item">
                     <img src="assets/vitamin-heart.jpg" alt="Image 1" class="vitamin-heart">
-                    <p>Image 1 description or content below the image.</p>
+                    <p class="main-desc">TELL US ABOUT YOURSELF</p>
+                    <p class="sub-desc">Take our quiz and tell us about your goals, lifestyle, and values.</p>
                 </div>
                 <div class="image-item">
                     <img src="assets/healthy-meal.jpg" class="healthy-meal">
-                    <p>Image 2 description or content below the image.</p>
+                    <p class="main-desc">FIND YOUR ROUTINE</p>
+                    <p class="sub-desc">We’ll personalize a plan backed by science made just for you.</p>
+
                 </div>
                 <div class="image-item">
                     <img src="assets/asian.jpg" alt="Image 3" class="asian">
-                    <p>Image 3 description or content below the image.</p>
+                    <p class="main-desc">STICK WITH IT</p>
+                    <p class="sub-desc">Build habits that improve your health goals by using our app.</p>
                 </div>
             </div>
+
+            <div class="reminder">
+                <h3>Let's Get Started</h3>
+                <button class="start-btn">Let's Go!</button>
+            </div>
         </section>
-        
         </div>
     </main>
 
