--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vitamin App</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <title>Home</title>
+    <link rel="stylesheet" href="styles/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Luckiest+Guy&family=Pixelify+Sans:wght@500&family=Public+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
@@ -16,8 +16,7 @@
 <body>
     <main class="main">
         <header class="header">
-            <a href="#" class="logo">VitaMatch</a>
-
+            <a href="index.html" class="logo">VitaMatch</a>
             <nav class="navbar">
                 <a href="#" class="active">Home</a>
                 <a href="#">About</a>
@@ -158,9 +157,9 @@
     </div>
     </main>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="JS/main.js"></script>
 
     <!-- Swiper JS -->
-    <script src="swiper-bundle.min.js"></script>
+    <script src="JS/swiper-bundle.min.js"></script>
 </body>
 </html>
