--- a/quiz.html
+++ b/quiz.html
@@ -28,15 +28,15 @@
     <section class="quiz section" style="display: none;">
         <h1>What is your age?</h1>
         <div class="response-section">
-            <div class="response-box">
+            <div class="response-box-1">
                 <i class="fa-solid fa-child"></i>
                 <p>0-17</p>
             </div>
-            <div class="response-box">
+            <div class="response-box-1">
                 <i class="fa-solid fa-user"></i>
                 <p>18-55</p>
             </div>
-            <div class="response-box">
+            <div class="response-box-1">
                 <i class="fa-solid fa-person-cane"></i>
                 <p>55+</p>
             </div>
@@ -91,39 +91,41 @@
     </section>
     </div>
 
-    <section class="questions section" style="display: none;">
+    <section class="questions section" style="display: none;">            
         <div class="question" id="question-2">
-            <h3>Do you take any vitamins or supplements currently?</h3>
-            <p>Vitamins, fish oil, or similar</p>
-            <div class="answer">
-                <div class="answer-circle" data-next-question="question-3">Yes</div>
-                <div class="answer-circle" data-next-question="question-4">No</div>
-            </div>
-        </div>
-        
-        <div class="question" id="question-3">
             <h3>How many vitamins or supplements do you currently take?</h3>
             <div class="response-section">
-                <div class="response-box" data-next-question="question-4">
-                    <i class="fa-solid fa-child"></i>
+                <div class="response-box" data-next-question="question-3">
+                    <img src="assets/None.svg" alt="" class="response-img">
                     <p>None</p>
                 </div>
-                <div class="response-box" data-next-question="question-4">
-                    <i class="fa-solid fa-user"></i>
+                <div class="response-box" data-next-question="question-3">
+                    <img src="assets/1-4.svg" alt="" class="response-img">
                     <p>1-4</p>
                 </div>
-                <div class="response-box" data-next-question="question-4">
-                    <i class="fa-solid fa-person-cane"></i>
+                <div class="response-box" data-next-question="question-3">
+                    <img src="assets/1-5.svg" alt="" class="response-img">
                     <p>5+</p>
                 </div>
             </div>
-        
-        <div class="question" id="question-4">
-            <h3>Do you take any vitamins or supplements currently?</h3>
+        </div>
+        <div class="question" id="question-3" style="display: none;">
+            <h3>In an average week, how often do you take powders?</h3>
             <p>Protein, collagen, or anything mixed into a drink.</p>
-            <div class="answer">
-                <div class="answer-circle" data-next-question="">Yes</div>
-                <div class="answer-circle" data-next-question="">No</div>
+            <div class="answer-3">
+                <div class="response-check" data-next-question="question-4">Rarely</div>
+                <div class="response-check" data-next-question="question-4">Couple Days</div>
+                <div class="response-check" data-next-question="question-4">Most Days</div>
+            </div>
+        </div>
+        <div class="question" id="question-4" style="display: none;">
+            <h3>What is your sex?</h3>
+            <p>Factors like your sex and hormones impact your nutritional needs.
+            </p>
+            <div class="answer-3">
+                <div class="response-check" data-next-question="question-5">Male</div>
+                <div class="response-check" data-next-question="question-5">Female</div>
+                <div class="response-check" data-next-question="question-5">Prefer not to say</div>
             </div>
         </div>
     </section>
