--- a/test.html
+++ b/test.html
@@ -8,7 +8,23 @@
 </head>
 <body>
     <section class="questions section">
-
+        <div class="question" id="question-2">
+            <h3>How many vitamins or supplements do you currently take?</h3>
+            <div class="response-section">
+                <div class="response-box" data-next-question="question-4">
+                    <img src="assets/None.svg" alt="" class="response-img">
+                    <p>None</p>
+                </div>
+                <div class="response-box" data-next-question="question-4">
+                    <img src="assets/1-4.svg" alt="" class="response-img">
+                    <p>1-4</p>
+                </div>
+                <div class="response-box" data-next-question="question-4">
+                    <img src="assets/1-5.svg" alt="" class="response-img">
+                    <p>5+</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
